--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/maliao292/snabdom/issues"
   },
-  "homepage": "https://github.com/maliao292/snabdom#readme"
+  "homepage": "https://github.com/maliao292/snabdom#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.4",
+    "snabbdom": "^0.7.4"
+  }
 }
